# elektronn3

./: .gitattributes  .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.md  setup.py  train.py  versioneer.py  vnet_train.py
autoenc/: autoenc.py
benchmark/: pred_benchmark.py  pred_benchmark.sh  train_benchmark.py  train_benchmark.sh
convpoint_dev/: evaluate_val.py  metrics.py  shapenet.py  train.py  train_convpoint.py  train_convpoint_elek3.py  train_e3.py  trainval_e3.py  validate.py  validate_convpoint.py  validate_full.py  validate_merger.py
docs/: Makefile  conf.py  index.rst  sphinx-environment.yml  sphinx-requirements.txt
elektronn3/: __init__.py  _version.py  logger.py
examples/: inference_h5.py  random_blurring_augmentation_example.py  simple2d.py  spine_multiviews.py  synclassdist.py  syndist.py  train_convpoint.py  train_noise2void.py  train_simple2d.py  train_unet_neurodata.py  train_with_ax.py  trainer_ax.py  unet_for_ax.py  validate.py
lsd/: .gitignore  .lsd_paper.txt.swp  .pdbrc  2q  README  debug.txt  findcoord_debug.py  flaskapp.py  ipython_lsd_com.ipy  knossos_loadplan.txt  knossos_nozip.py  lsd.py  lsd_paper.txt  lsd_plan.txt  maskedloss.py  matplotlib2terminal.py  new_knossos.py  newmetric.py  outfile.txt  plot_ratio.py  plot_slices.py  plotting_flask.py  test.txt  testing_lsd.py  testklabels.py  testklabelsnozip.py  todo.txt  train_unet_neurodata_lsd.py  uniques.txt  uniques_noreuse.txt  vigranumpy_ipython.ipy  vim  visualizer.py  viztest.py
vnet3d/: train.py  (+1 more)
(+116 files in other folders)
